assets/css/main.css
/* ... */
.no-touch .mask figure:hover figcaption,
.mask figure.cs-hover figcaption {
	opacity: 1;
	-webkit-transform: translateY(0px);
	-moz-transform: translateY(0px);
	-ms-transform: translateY(0px);
	transform: translateY(0px);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
	transition: transform 0.4s, opacity 0.1s;
}

.mask figcaption a {
	position: absolute;
	top:10px;
	bottom: 10px;
	right: 30px;
}

/* ==========================================================================
   Pricing Tables
   ========================================================================== */
   
.pricing-option {
    padding-bottom: 40px;
}

.pricing-option .pricing-top {
    position: relative;
    background: #222;
    color: white;
    text-align: center;
    font-weight: bold;

    padding: 40px 20px 30px 20px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.pricing-option .pricing-top .special-label {
    display: block;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: #f1c40f;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: bold;
    padding: 3px 0;
}

.special .pricing-top {
    background: black;
}

.pricing-option .pricing-edition {
    text-transform: uppercase;
    display: block;
    font-size: 25px;
    letter-spacing: 8px;
}

.pricing-option .price {
    display: inline-block;
    position: relative;
}

.pricing-option .price sup {
    position: absolute;
    top: 50px;
    left: -10px;
    font-size: 24px;
}

.pricing-option .price .price-amount {
    font-size: 108px;
    letter-spacing: -4px;
}

.pricing-option .price small {
    position: relative;
    left: -10px;
    font-size: 18px;
}

.pricing-option ul {
    list-style: none;
    margin: 0;
    background: #eee;
    text-align: center;
    padding-left: 0px;
}

.pricing-option ul li {
    border-bottom: solid 1px #e1e1e1;
    padding-top: 20px;
    padding-bottom: 20px;
}

.pricing-option .pricing-signup {
    display: block;
    text-align: center;
    font-size: 18px;
    font-weight: bold;
    padding: 15px 10px;
    color: white;
    background: #f1c40f;
}

.pricing-option .pricing-signup:hover {
    background: #f39c12;
}

/*  --- new ---- */

@media (max-width: 700px) {
	iframe#calendar {
		width: 50%;
	}	
}

@media (max-width: 700px) {
	#mobile-portfolio {
		display: none;
	}
}

div.shadow {
	float:left;
	position: relative;
	height: 245px;
	width: 300px;
	margin: 20px;
	border: 1px solid #ccc;
	padding: 10px;
	background: #777777;
	}

@media (max-width: 700px) {
	div.shadow {
		width: 100%;
		margin: 0;
		margin-bottom: 10px;
	}
}

@media (min-width: 1200px) {
	div #top-div-mid{
		left: 7%;
	}

	div #top-div-right{
		float: right;
	}
}

div.shadow:hover {
	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.5);
	box-shadow: 0 0 5px rgba(0,0,0,0.5);
	background-color: #EE2524;
	}
	
	
div.feature {
	    position: relative;
		
	}
 
div.feature a {
	    position: relative;
	    width: 100%;
	    height: 100%;
	    top: 0;
	    left: 0;
	    text-decoration: none; /* No underlines on the link */
	    z-index: 10; /* Places the link above everything else in the div */
	    background-color: #FFF; /* Fix to make div clickable in IE */
	    opacity: 0; /* Fix to make div clickable in IE */
	    filter: alpha(opacity=1); /* Fix to make div clickable in IE */
	}
	
div.footerbox {
		float:left;
		width: 300px;
		margin: 20px;
		border: 1px solid #ccc;
		padding: 10px;
		background-color: #ACACAC;
		/* For Opacity 
	    opacity: .50; 
	    filter: alpha(opacity=50); 
	    -ms-filter: "alpha(opacity=50)"; 
	    -khtml-opacity: .50; 
	    -moz-opacity: .50; 
		*/
		}

#pop-up {
	background: #333333;
	color: white;
	overflow: hidden;
}

#pop-up h1, h2, h3 {
	color: white;
}

#pop-up h1 {
	text-align: center;
	font-weight: bold;
}

div#mc_embed_signup {
	width: 50%;
	margin: auto;
}

#team-alpha p {
	font-size: 17px;
	line-height: 27px;
}

#team-alpha b {
	line-height: 35px;
	font-size: 20px;
}

.div-home-page p {
	font-size: 17px;
	line-height: 28px;
}

#social-phrase h2 {
	color: black;
}
		
/* Sub Page Gray Ribbons 1 */
		#s1 {
			background: #333333;
			padding-top: 50px;
			padding-bottom: 50px;
		}

		#s1 h2 {
			color: white;
		}

		#s1 h3 {
			color: white;
		}


		#s1 p {
			color: white;
		}

		#s1 .col-lg-2 {
			padding-left: 0px;
			padding-right: 0px;
		}
		
/* Sub Page White Ribbons 1 */

		#s2 {
			background: #ffffff;
			padding-top: 50px;
			padding-bottom: 50px;
		}

		#s2 i {
			font-size: 70px;
			color: #2f2f2f;
			padding-bottom: 30px;
		}

		#s2 i:hover {
			color: #f1c40f
		}
		
		#s2 h2 {
			color: black;
		}
		
		#s2 p {
			font-weight: 200;
			color: black;		
}		

/* Sub Page Gray Ribbons 2 */
		#s3 {
			background: #333333;
			padding-top: 50px;
			padding-bottom: 50px;
		}

		#s3 h2 {
			color: white;
		}

		#social-footer h2 {
			color: black;
		}

		#s3 h3 {
			color: white;
		}


		#s3 p {
			color: white;
		}

		#s3 .col-lg-2 {
			padding-left: 0px;
			padding-right: 0px;
		}

/* Sub Page White Ribbons 2 */

		#s4 {
			background: #ffffff;
			padding-top: 50px;
			padding-bottom: 50px;
		}

		#s4 i {
			font-size: 70px;
			color: #2f2f2f;
			padding-bottom: 30px;
		}

		#s4 i:hover {
			color: #f1c40f
		}
		
		#s4 h2 {
			color: black;
		}
		
		#s4 p {
			font-weight: 200;
			color: black;		
}				

/* Sub Page Gray Ribbons 3 */
		#s5 {
			background: #333333;
			padding-top: 50px;
			padding-bottom: 50px;
		}

		#s5 h2 {
			color: white;
		}

		#social-footer h2 {
			color: black;
		}

		#s5 h3 {
			font-size: 30px;
			color: white;
		}


		#s5 p {
			color: white;
		}

		#s5 .col-lg-2 {
			padding-left: 0px;
			padding-right: 0px;
			}


/* Sub Page White Ribbons 3 */

		#s6 {
			background: #ffffff;
			padding-top: 50px;
			padding-bottom: 50px;
		}
/* ... */

